; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_wgt_4x8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_wgt_4x8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32)* @avc_wgt_4x8_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avc_wgt_4x8_msa(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_8__, align 4
  %17 = alloca %struct.TYPE_8__, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %29 = bitcast %struct.TYPE_8__* %16 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %29, i8 0, i64 4, i1 false)
  %30 = bitcast %struct.TYPE_8__* %17 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %30, i8 0, i64 4, i1 false)
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* %8, align 4
  %33 = shl i32 %31, %32
  store i32 %33, i32* %15, align 4
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @__msa_fill_h(i32 %34)
  store i32 %35, i32* %26, align 4
  %36 = load i32, i32* %15, align 4
  %37 = call i32 @__msa_fill_h(i32 %36)
  store i32 %37, i32* %28, align 4
  %38 = load i32, i32* %8, align 4
  %39 = call i32 @__msa_fill_h(i32 %38)
  store i32 %39, i32* %27, align 4
  %40 = load i32*, i32** %6, align 8
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %13, align 4
  %45 = load i32, i32* %14, align 4
  %46 = call i32 @LW4(i32* %40, i32 %41, i32 %42, i32 %43, i32 %44, i32 %45)
  %47 = load i32, i32* %11, align 4
  %48 = load i32, i32* %12, align 4
  %49 = load i32, i32* %13, align 4
  %50 = load i32, i32* %14, align 4
  %51 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @INSERT_W4_UB(i32 %47, i32 %48, i32 %49, i32 %50, i32 %52)
  %54 = load i32*, i32** %6, align 8
  %55 = load i32, i32* %7, align 4
  %56 = mul i32 4, %55
  %57 = zext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %54, i64 %57
  %59 = load i32, i32* %7, align 4
  %60 = load i32, i32* %11, align 4
  %61 = load i32, i32* %12, align 4
  %62 = load i32, i32* %13, align 4
  %63 = load i32, i32* %14, align 4
  %64 = call i32 @LW4(i32* %58, i32 %59, i32 %60, i32 %61, i32 %62, i32 %63)
  %65 = load i32, i32* %11, align 4
  %66 = load i32, i32* %12, align 4
  %67 = load i32, i32* %13, align 4
  %68 = load i32, i32* %14, align 4
  %69 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  %70 = load i32, i32* %69, align 4
  %71 = call i32 @INSERT_W4_UB(i32 %65, i32 %66, i32 %67, i32 %68, i32 %70)
  %72 = load i32, i32* %18, align 4
  %73 = load i32, i32* %19, align 4
  %74 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %75 = load i32, i32* %74, align 4
  %76 = call i32 @UNPCK_UB_SH(i32 %75, i32 %72, i32 %73)
  %77 = load i32, i32* %20, align 4
  %78 = load i32, i32* %21, align 4
  %79 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  %80 = load i32, i32* %79, align 4
  %81 = call i32 @UNPCK_UB_SH(i32 %80, i32 %77, i32 %78)
  %82 = load i32, i32* %26, align 4
  %83 = load i32, i32* %18, align 4
  %84 = load i32, i32* %26, align 4
  %85 = load i32, i32* %19, align 4
  %86 = load i32, i32* %26, align 4
  %87 = load i32, i32* %20, align 4
  %88 = load i32, i32* %26, align 4
  %89 = load i32, i32* %21, align 4
  %90 = load i32, i32* %22, align 4
  %91 = load i32, i32* %23, align 4
  %92 = load i32, i32* %24, align 4
  %93 = load i32, i32* %25, align 4
  %94 = call i32 @MUL4(i32 %82, i32 %83, i32 %84, i32 %85, i32 %86, i32 %87, i32 %88, i32 %89, i32 %90, i32 %91, i32 %92, i32 %93)
  %95 = load i32, i32* %22, align 4
  %96 = load i32, i32* %28, align 4
  %97 = load i32, i32* %23, align 4
  %98 = load i32, i32* %28, align 4
  %99 = load i32, i32* %24, align 4
  %100 = load i32, i32* %28, align 4
  %101 = load i32, i32* %25, align 4
  %102 = load i32, i32* %28, align 4
  %103 = load i32, i32* %22, align 4
  %104 = load i32, i32* %23, align 4
  %105 = load i32, i32* %24, align 4
  %106 = load i32, i32* %25, align 4
  %107 = call i32 @ADDS_SH4_SH(i32 %95, i32 %96, i32 %97, i32 %98, i32 %99, i32 %100, i32 %101, i32 %102, i32 %103, i32 %104, i32 %105, i32 %106)
  %108 = load i32, i32* %22, align 4
  %109 = load i32, i32* %23, align 4
  %110 = load i32, i32* %24, align 4
  %111 = load i32, i32* %25, align 4
  %112 = call i32 @MAXI_SH4_SH(i32 %108, i32 %109, i32 %110, i32 %111, i32 0)
  %113 = load i32, i32* %22, align 4
  %114 = load i32, i32* %23, align 4
  %115 = load i32, i32* %24, align 4
  %116 = load i32, i32* %25, align 4
  %117 = load i32, i32* %27, align 4
  %118 = call i32 @SRLR_H4_SH(i32 %113, i32 %114, i32 %115, i32 %116, i32 %117)
  %119 = load i32, i32* %22, align 4
  %120 = load i32, i32* %23, align 4
  %121 = load i32, i32* %24, align 4
  %122 = load i32, i32* %25, align 4
  %123 = call i32 @SAT_UH4_SH(i32 %119, i32 %120, i32 %121, i32 %122, i32 7)
  %124 = load i32, i32* %23, align 4
  %125 = load i32, i32* %22, align 4
  %126 = load i32, i32* %25, align 4
  %127 = load i32, i32* %24, align 4
  %128 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %129 = load i32, i32* %128, align 4
  %130 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  %131 = load i32, i32* %130, align 4
  %132 = call i32 @PCKEV_B2_UB(i32 %124, i32 %125, i32 %126, i32 %127, i32 %129, i32 %131)
  %133 = load i32*, i32** %6, align 8
  %134 = load i32, i32* %7, align 4
  %135 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %136 = load i32, i32* %135, align 4
  %137 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  %138 = load i32, i32* %137, align 4
  %139 = call i32 @ST_W8(i32 %136, i32 %138, i32 0, i32 1, i32 2, i32 3, i32 0, i32 1, i32 2, i32 3, i32* %133, i32 %134)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @__msa_fill_h(i32) #2

declare dso_local i32 @LW4(i32*, i32, i32, i32, i32, i32) #2

declare dso_local i32 @INSERT_W4_UB(i32, i32, i32, i32, i32) #2

declare dso_local i32 @UNPCK_UB_SH(i32, i32, i32) #2

declare dso_local i32 @MUL4(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ADDS_SH4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @MAXI_SH4_SH(i32, i32, i32, i32, i32) #2

declare dso_local i32 @SRLR_H4_SH(i32, i32, i32, i32, i32) #2

declare dso_local i32 @SAT_UH4_SH(i32, i32, i32, i32, i32) #2

declare dso_local i32 @PCKEV_B2_UB(i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ST_W8(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
